--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <h2>About Me</h2>
 
-    <img src="your-photo.jpg" alt="Kalai Vani">
+    <img src="IMG_20250909_164804.jpg" alt="Kalai Vani">
 
     <p>Hello! I'm <b>M.Kalai Vani</b>, a student interested in web development and programming.  
 
