--- a/index (1).html
+++ b/index (1).html
@@ -38,7 +38,7 @@
   <section id="about" class="about">
     <h2>About Me</h2>
     <div class="about-content">
-      <img src="Nkalaivani M.jpeg" alt="Profile Photo">
+      <img src="kalaivani M.jpeg" alt="Profile Photo">
       <p>I am a student of computer science department.
         I love building interactive, user-friendly web applications and exploring new tools in the tech world.</p>
     </div>
@@ -82,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
